# money_management_app

./: .gitignore  README.md  bun.lockb  default.nix  dump.rdb  pyproject.toml
src/app_dashboard/: urls.py  views.py
src/app_landing/: urls.py  views.py
src/app_login/: urls.py  views.py
src/app_login/migrations/: 0001_create_user_table.py
src/app_pocket/: apps.py  urls.py  views.py
src/app_pocket/migrations/: 0001_create_pocket_table.py
src/app_pocket/static/app_pocket/: tailwind.css
src/app_transaction/: urls.py  views.py
src/app_transaction/migrations/: 0001_create_transaction_table.py
src/app_transaction/templates/app_transaction/: index.html
src/app_transfer/: apps.py  urls.py  views.py
src/app_transfer/migrations/: 0001_create_transfer_table.py
src/money_management/: settings.py  urls.py
